@@ -1,5 +1,6 @@
 package com.ltp.gradesubmission;
 
+import com.ltp.gradesubmission.entity.User;
 import com.ltp.gradesubmission.exceptions.*;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
@@ -13,6 +14,8 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @ControllerAdvice
 public class ApplicationExceptionHandler extends ResponseEntityExceptionHandler {
@@ -24,28 +27,35 @@ public class ApplicationExceptionHandler extends ResponseEntityExceptionHandler 
     @ExceptionHandler({CourseNotFoundException.class, GradeNotFoundException.class, StudentNotFoundException.class})
     public ResponseEntity<Object> handeleRecourceNotFoundExceptions(RuntimeException ex){
         return  new ResponseEntity<>(
-                new ErrorResponse(Arrays.asList(ex.getMessage())),
+                new ErrorResponse(Collections.singletonList(ex.getMessage())),
                 HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(EmptyResultDataAccessException.class)
     public ResponseEntity<Object> handleEmptyResltDataAccessException(RuntimeException ex){
         return new ResponseEntity<>(
-                new ErrorResponse(Arrays.asList("Cannot delete non-existing resource")),
+                new ErrorResponse(List.of("Cannot delete non-existing resource")),
                 HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<Object> handleDataIntegrityViolationException(RuntimeException ex){
         return new ResponseEntity<>(
-                new ErrorResponse(Arrays.asList("Data Integrity Violation: we cannot process your request")),
+                new ErrorResponse(List.of("Data Integrity Violation: we cannot process your request")),
                 HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(StudentNotEnrolledException.class)
     public ResponseEntity<Object> handleStudentNotEnrolledException(RuntimeException ex){
         return new ResponseEntity<>(
-                new ErrorResponse(Arrays.asList(ex.getMessage())),
+                new ErrorResponse(Collections.singletonList(ex.getMessage())),
+                HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(UserNotFoundException.class)
+    public  ResponseEntity<Object> handleUserNotFoundException(RuntimeException ex){
+        return new ResponseEntity<>(
+                new ErrorResponse(Collections.singletonList(ex.getMessage())),
                 HttpStatus.NOT_FOUND);
     }
 
